# test-glibc

./: CMakeLists.txt  glibc-atexit.cpp  glibc-version.cpp
